--- a/Project/Project/index.html
+++ b/Project/Project/index.html
@@ -16,6 +16,8 @@
 
     body {
       background-image: url("Thing.png");
+      background-size: cover;
+      background-attachment: fixed;
       font-family: 'Lilita One', cursive;
       text-decoration-color: white;
     }
