--- a/Project/Project/Sponsor.html
+++ b/Project/Project/Sponsor.html
@@ -6,6 +6,13 @@
     <title>Sponsors</title>
     <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
     <style>
+    img {
+      width: 300px;
+    }
+
+    header {
+      text-align: center;
+    }
       body {
       background-image: url("Thing.png");
       background-size: cover;
@@ -35,7 +42,7 @@
             <li><a href="#">Pictures</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="Research.html">Resources</a></li>
-            <li><a href="#">Sponsors</a></li>
+            <li><a href="Sponsor.html">Sponsors</a></li>
           </ul>
         </nav>
   </body>
