--- a/Project/Project/index.html
+++ b/Project/Project/index.html
@@ -66,7 +66,7 @@
           <li><a href="#">Pictures</a></li>
           <li><a href="#">Events</a></li>
           <li><a href="Research.html">Resources</a></li>
-          <li><a href="#">Sponsors</a></li>
+          <li><a href="Sponsor.html">Sponsors</a></li>
         </ul>
       </nav>
 
