--- a/Project/Project/index.html
+++ b/Project/Project/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">   <meta charset="utf-8">
   <title>Social Intervention</title>
 <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
   <style>
