--- a/Project/Project/index.html
+++ b/Project/Project/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">   <meta charset="utf-8">
-  <title>Social Intervention</title>
+  <title>Cards For Humanity</title>
 <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
   <style>
     img {
