--- a/Project/Project/Research.html
+++ b/Project/Project/Research.html
@@ -5,20 +5,32 @@
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <meta charset="utf-8">
   <title>Research</title>
-  <link href="https://fonts.googleapis.com/css?family=Cute+Font" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
 
 </head>
 
 <style media="screen">
   body {
   background-image: url("Thing.png");
-  font-family: 'Cute Font', cursive;
+  font-family: 'Lilita One', cursive;
   text-decoration-color: white;
   }
 
+  nav {
+    width: 20%;
+    background: lightblue;
+    border-radius: 10%;
+    padding-top: 2px;
+    padding-bottom: 2px;
+  }
+  header {
+    text-align: center;
+  }
+
+
   h1{
   color: darkgray;
-  font-size: 100px;
+  font-size: 50px;
   }
   h2{
   color: darkgray;
@@ -28,7 +40,7 @@
   }
   p{
   color: black;
-  font-size: 50px
+  font-size: 30px
   }
   ul{
   list-style-type: none;
@@ -36,11 +48,11 @@
   padding: 0;
   }
   img {
-    float: right;
+
     border-radius: 15px;
     height: 450px;
   }
-  a {
+  .x a {
   color: red;
   text-decoration: none;
   display:block;
@@ -50,34 +62,49 @@
   padding: 10px;
   margin: 10px;
   border-radius: 40%;
-
   text-align: center;
-  font-size: 30px;
+  font-size: 15px;
 
   }
-  a:hover {
+  .x a:hover {
   background: black;
   color: orange;
   border radius: 50%;
   }
-  a:active {
+.x  a:active {
   color: red;
   background: red;
   width
   }
-  }
+
   </style>
 
 
 
   <body>
-    <img src="Keep-Calm-Roll-Initiative-DESIGN.jpg" alt="Deku">
+    <main>
+      <header class="clearfix">
+        <img src="logo.png" alt="cards for humanity"> </img>
+      </header>
+
+      <div id="content" class="clearfix">
+        <nav>
+          <ul>
+
+            <li><a href="#">Pictures</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="Research.html">Resources</a></li>
+            <li><a href="Sponsor.html">Sponsors</a></li>
+          </ul>
+        </nav>
+<div class="x">
+
     <h1> Research for this Initiative:</h1>
     <p>Crimson Education.<a href="https://www.crimsoneducation.org/us/blog/benefits-of-extracurricular-activities">link</a></p>
     <p>School Speciality.<a href="https://blog.schoolspecialty.com/benefits-participation-school-activities/">link</a></p>
     <p>Article on Club/ Activity with Groups.<a href="https://education.stateuniversity.com/pages/1838/Clubs.html">link</a></p>
 
-
+</div>
 
   </body>
 
