--- a/Project/Project/index.html
+++ b/Project/Project/index.html
@@ -63,6 +63,7 @@
     <div id="content" class="clearfix">
       <nav>
         <ul>
+          <li><a href="index.html"> Home</a></li>
           <li><a href="#">Pictures</a></li>
           <li><a href="#">Events</a></li>
           <li><a href="Research.html">Resources</a></li>
