--- a/Project/Project/index.html
+++ b/Project/Project/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">   <meta charset="utf-8">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8">
   <title>Cards For Humanity</title>
-<link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
   <style>
     img {
       width: 300px;
