--- a/Project/Project/Pictures.html
+++ b/Project/Project/Pictures.html
@@ -29,11 +29,10 @@
     }
 
     .Pictures img{
-      background-color: lightblue;
+      background-color: black;
       border-radius: 10%;
-
+      margin:10px;
     }
-
 
 
 
@@ -58,7 +57,7 @@
         </nav>
 
         <div class="Pictures">
-
+          <img src="logo.png"/>
         </div>
 
 
