--- a/Project/Project/Research.html
+++ b/Project/Project/Research.html
@@ -49,8 +49,7 @@
   }
   img {
 
-    border-radius: 15px;
-    height: 450px;
+    height: 300px;
   }
   .x a {
   color: red;
@@ -90,9 +89,9 @@
       <div id="content" class="clearfix">
         <nav>
           <ul>
-
-            <li><a href="#">Pictures</a></li>
-            <li><a href="#">Events</a></li>
+  <li><a href="index.html"> Home</a></li>
+            <li><a href="Pictures.html">Pictures</a></li>
+            <li><a href="events.html">Events</a></li>
             <li><a href="Research.html">Resources</a></li>
             <li><a href="Sponsor.html">Sponsors</a></li>
           </ul>
