--- a/Project/Project/Sponsor.html
+++ b/Project/Project/Sponsor.html
@@ -27,6 +27,31 @@
       padding-top: 2px;
       padding-bottom: 2px;
     }
+  .x a {
+    color: red;
+    text-decoration: none;
+    display:block;
+    background: orange;
+    width: 150px;
+    height:30px;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 40%;
+    text-align: center;
+    font-size: 15px;
+
+    }
+    .x a:hover {
+    background: black;
+    color: orange;
+    border radius: 50%;
+    }
+  .x  a:active {
+    color: red;
+    background: red;
+    width
+    }
+
       </style>
   </head>
 
@@ -39,12 +64,20 @@
       <div id="content" class="clearfix">
         <nav>
           <ul>
-            <li><a href="#">Pictures</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="index.html"> Home</a></li>
+            <li><a href="Pictures.html">Pictures</a></li>
+            <li><a href="events.html">Events</a></li>
             <li><a href="Research.html">Resources</a></li>
             <li><a href="Sponsor.html">Sponsors</a></li>
           </ul>
         </nav>
+        <div class="x">
+
+          <h1> Sponsors:</h1>
+          <p>Sponsor 1.<a href="#">link</a></p>
+          <p>Sponsor 2.<a href="#">link</a></p>
+          <p>Sponsor 3.<a href="#">link</a></p>
+          </div>
   </body>
 
 </html>
