--- a/Project/Project/index.html
+++ b/Project/Project/index.html
@@ -64,8 +64,8 @@
       <nav>
         <ul>
           <li><a href="index.html"> Home</a></li>
-          <li><a href="#">Pictures</a></li>
-          <li><a href="#">Events</a></li>
+          <li><a href="Pictures.html">Pictures</a></li>
+          <li><a href="events.html">Events</a></li>
           <li><a href="Research.html">Resources</a></li>
           <li><a href="Sponsor.html">Sponsors</a></li>
         </ul>
