--- a/Project/Project/Pictures.html
+++ b/Project/Project/Pictures.html
@@ -34,7 +34,7 @@
     .Pictures img {
       background-color: lightblue;
       border-radius: 10%;
-
+      margin:10px;
     }
   </style>
 </head>
@@ -56,9 +56,32 @@
         </ul>
       </nav>
 
-      <div class="Pictures">
+      </style>
+  </head>
 
-      </div>
+  <body>
+    <main>
+      <header class="clearfix">
+        <img src="logo.png" alt="cards for humanity"> </img>
+      </header>
+
+      <div id="content" class="clearfix">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Pictures</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="Research.html">Resources</a></li>
+            <li><a href="Sponsor.html">Sponsors</a></li>
+          </ul>
+        </nav>
+
+        <div class="Pictures">
+          <img src="logo.png"/>
+        </div>
+
+
+
 
 
 
