--- a/Project/Project/Sponsor.html
+++ b/Project/Project/Sponsor.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <meta charset="utf-8">
   <title>Sponsors</title>
   <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
