--- a/Project/Project/events.html
+++ b/Project/Project/events.html
@@ -3,11 +3,82 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Sponsors</title>
+  <link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
+  <style>
+    img {
+      width: 300px;
+    }
+
+    header {
+      text-align: center;
+    }
+
+    body {
+      background-image: url("Thing.png");
+      background-size: cover;
+      background-attachment: fixed;
+      font-family: 'Lilita One', cursive;
+      text-decoration-color: white;
+    }
+
+    nav {
+      width: 20%;
+      background: lightblue;
+      border-radius: 10%;
+      padding-top: 2px;
+      padding-bottom: 2px;
+    }
+
+    .x a {
+      color: red;
+      text-decoration: none;
+      display: block;
+      background: orange;
+      width: 150px;
+      height: 30px;
+      padding: 10px;
+      margin: 10px;
+      border-radius: 40%;
+      text-align: center;
+      font-size: 15px;
+    }
+
+    .x a:hover {
+      background: black;
+      color: orange;
+      border radius: 50%;
+    }
+
+    .x a:active {
+      color: red;
+      background: red;
+      width
+    }
+  </style>
 </head>
 
 <body>
-
+  <main>
+    <header class="clearfix">
+      <img src="logo.png" alt="cards for humanity"> </img>
+    </header>
+    <div id="content" class="clearfix">
+      <nav>
+        <ul>
+          <li><a href="index.html"> Home</a></li>
+          <li><a href="Pictures.html">Pictures</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="Research.html">Resources</a></li>
+          <li><a href="Sponsor.html">Sponsors</a></li>
+        </ul>
+      </nav>
+      <div class="x">
+        <h1> EVENTS:</h1>
+        <p>Event 1.<a href="#">link</a></p>
+        <p>Event 2.<a href="#">link</a></p>
+        <p>Event 3.<a href="#">link</a></p>
+      </div>
 </body>
 
 </html>
