--- a/Project/Project/Sponsor.html
+++ b/Project/Project/Sponsor.html
@@ -76,7 +76,7 @@
         </nav>
         <div class="x">
 
-          <h1> Sponsors: rheet</h1>
+          <h1> Sponsors:</h1>
           <p>Sponsor 1.<a href="#">link</a></p>
           <p>Sponsor 2.<a href="#">link</a></p>
           <p>Sponsor 3.<a href="#">link</a></p>
