--- a/Project/Project/Pictures.html
+++ b/Project/Project/Pictures.html
@@ -55,9 +55,8 @@
           <li><a href="Sponsor.html">Sponsors</a></li>
         </ul>
       </nav>
-
-      </style>
-  </head>
+<div class="Pictures">
+  
 </body>
 
 </html>
