--- a/Project/Project/Pictures.html
+++ b/Project/Project/Pictures.html
@@ -32,7 +32,7 @@
     }
 
     .Pictures img {
-      background-color: lightblue;
+      background-color: black;
       border-radius: 10%;
       margin:10px;
     }
@@ -49,14 +49,14 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Pictures</a></li>
-          <li><a href="#">Events</a></li>
+          <li><a href="Pictures.html">Pictures</a></li>
+          <li><a href="events.html">Events</a></li>
           <li><a href="Research.html">Resources</a></li>
           <li><a href="Sponsor.html">Sponsors</a></li>
         </ul>
       </nav>
 <div class="Pictures">
-  
+  <img src="logo.png">
 </body>
 
 </html>
