--- a/Project/Project/Research.html
+++ b/Project/Project/Research.html
@@ -12,6 +12,8 @@
 <style media="screen">
   body {
     background-image: url("Thing.png");
+    background-size: cover;
+    background-attachment: fixed;
     font-family: 'Lilita One', cursive;
     text-decoration-color: white;
   }
