--- a/Project/Project/events.html
+++ b/Project/Project/events.html
@@ -75,9 +75,9 @@
       </nav>
       <div class="x">
         <h1> EVENTS:</h1>
-        <p>Event 1.<a href="#">link</a></p>
-        <p>Event 2.<a href="#">link</a></p>
-        <p>Event 3.<a href="#">link</a></p>
+        <p>Event 1.<a href="https://runsignup.com/Race/MI/Lansing/Neogen5k">5k Run</a></p>
+        <p>Event 2.<a href="https://therealcost.betobaccofree.hhs.gov/">The Real Cost</a></p>
+        <p>Event 3.<a href="https://owlcation.com/social-sciences/How-to-Accept-and-Respect-other-Cultures">Accept Culture</a></p>
       </div>
 </body>
 
